--- a/components/TopGradient.css
+++ b/components/TopGradient.css
@@ -54,6 +54,25 @@
 }
 
 
+/*content*/
+.content-container {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 1200px;
+  width: 100%;
+  padding: 0;
+}
+
+
+
+@media (max-width: 1300px) {
+  .content-container {
+    padding: 4rem;
+  }
+}
+
 
 @media (max-width: 800px) {
   /*flattened top wave*/
@@ -88,5 +107,9 @@
     display: block;
     width: calc(225% + 1.3px);
     height: 100px;
+  }
+
+  .content-container {
+    padding: 1rem;
   }
 }
