--- a/app/page.css
+++ b/app/page.css
@@ -12,9 +12,11 @@
   z-index: -1;
 }
 
-.car-image {
-  transform: scale(1.25);
-  width: 100%;
+.hills-image {
+  transform: translateY(-2.5%) scale(1.5);
+  width: 150%;
+  height: 50vh;
+  min-height: 500px;
 }
 
 @media (max-width: 1200px) {
@@ -26,11 +28,6 @@
     height: 400px;
     transform: translateY(-10%);
     z-index: -1;
-  }
-
-  .car-image {
-    transform: scale(1.5);
-    width: 100%;
   }
 }
 
@@ -47,6 +44,12 @@
 @media (max-width: 768px) {
   .subheader {
     transform: translate(1.5rem, -1rem);
+  }
+
+  .hills-image {
+    transform: translateY(0%) scale(1.5);
+    width: 150%;
+    height: 50vh;
   }
 }
 
