--- a/app/page.css
+++ b/app/page.css
@@ -1,60 +1,30 @@
-.subheader {
+/* hero (top gradient content) */
+.hero-content-wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 4rem;
+}
+
+.tripia {
   transform: translate(2rem, -2rem);
 }
 
-.computer-image {
-  position: absolute;
-  top: 0;
-  right: 0;
+.hero-image {
   width: 500px;
-  height: 500px;
-  transform: translateY(-20%);
-  z-index: -1;
 }
 
-.hills-image {
-  transform: translateY(-2.5%) scale(1.5);
-  width: 150%;
-  height: 50vh;
-  min-height: 500px;
-}
-
-@media (max-width: 1200px) {
-  .computer-image {
-    position: absolute;
-    top: 0;
-    right: 4rem;
-    width: 400px;
-    height: 400px;
-    transform: translateY(-10%);
-    z-index: -1;
-  }
-}
-
-@media (max-width: 1000px) {
-  .computer-image {
-    display: none;
-  }
-
-  .home-page-text {
+@media (max-width: 900px) {
+  .hero-content-wrapper {
     text-align: center;
   }
-}
 
-@media (max-width: 768px) {
-  .subheader {
-    transform: translate(1.5rem, -1rem);
+  .tripia {
+    transform: translate(0, -1rem);
   }
-
-  .hills-image {
-    transform: translateY(0%) scale(1.5);
-    width: 150%;
-    height: 50vh;
-  }
-}
-
-@media (max-width: 500px) {
-  .subheader {
-    transform: translate(1rem, -1rem);
+  
+  .hero-image {
+    display: none;
   }
 }
