--- a/app/page.css
+++ b/app/page.css
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0 4rem;
+  padding: 0 10rem;
 }
 
 .tripia {
@@ -18,6 +18,7 @@
 @media (max-width: 900px) {
   .hero-content-wrapper {
     text-align: center;
+    padding: 0 4rem;
   }
 
   .tripia {
@@ -27,4 +28,14 @@
   .hero-image {
     display: none;
   }
+}
+
+
+
+/*content section (hills image) */
+.hills-image {
+  height: 50vh;
+  min-height: 500px;
+  width: 100%;
+  transform: scale(1.5) translateY(-5%);
 }
