--- a/components/ContentSectionButton.css
+++ b/components/ContentSectionButton.css
@@ -15,6 +15,15 @@
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
 }
 
+.content-button:disabled {
+  opacity: 0.5;
+}
+
+.content-button:active {
+  transform: scale(0.99);
+  box-shadow: none;
+}
+
 .gradient-button-big-text {
   font-size: 1.25rem;
 }
