--- a/components/ConfirmDialog.css
+++ b/components/ConfirmDialog.css
@@ -8,7 +8,7 @@
   justify-content: center;
   align-items: center;
   z-index: 5;
-  transition: opacity 0.4s linear;
+  transition: opacity 0.2s linear;
   opacity: 0;
   pointer-events: none;
 }
@@ -21,14 +21,14 @@
 .confirm-dialog {
   width: 90%;
   max-width: 600px;
-  height: 90%;
-  max-height: 300px;
+  max-height: 90%;
+  min-height: 300px;
   position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: white;
+  background: linear-gradient(to right, #f0f0f0 50%, white);
   border-radius: 16px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
   padding: 1rem;
