--- a/components/InputSelect.css
+++ b/components/InputSelect.css
@@ -63,10 +63,10 @@
 
 .options-container {
   position: absolute;
-  bottom: -11rem;
   width: 100%;
   height: 10rem;
   min-height: 10rem;
+  top: -11rem; /*height 10rem + 1rem margin */
   border-radius: 5px;
   overflow-y: auto;
   padding-left: 1rem;
