--- a/components/Toast.css
+++ b/components/Toast.css
@@ -6,7 +6,7 @@
   justify-content: center;
   align-items: center;
   width: 400px;
-  height: 75px;
+  min-height: 75px;
   background: linear-gradient(to right, #FCB045 75%, #966929 100%);
   box-shadow: -2px 4px 6px rgba(0, 0, 0, 0.1);
   z-index: 3;
