--- a/components/ModalConfirmDialog.css
+++ b/components/ModalConfirmDialog.css
@@ -7,7 +7,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 5;
+  z-index: 20;
   transition: opacity 0.2s linear;
   opacity: 0;
   pointer-events: none;
@@ -19,14 +19,14 @@
 }
 
 .confirm-dialog {
-  width: 90%;
-  max-width: 600px;
+  width: 95%;
+  max-width: 750px;
   max-height: 90%;
   min-height: 200px;
   position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   background: linear-gradient(to right, #f0f0f0 50%, white);
   border-radius: 16px;
@@ -34,6 +34,7 @@
   padding: 1rem;
   font-size: 1.25rem;
   text-align: center;
+  overflow-y: auto;
 }
 
 .close-icon {
