--- a/components/ModalConfirmDialog.css
+++ b/components/ModalConfirmDialog.css
@@ -11,6 +11,9 @@
   transition: opacity 0.2s linear;
   opacity: 0;
   pointer-events: none;
+  backdrop-filter: blur(10px); 
+  -webkit-backdrop-filter: blur(10px); /* For Safari support */
+  background-color: rgba(0, 0, 0, 0.25);
 }
 
 .shown {
@@ -21,7 +24,7 @@
 .confirm-dialog {
   width: 95%;
   max-width: 750px;
-  max-height: 90%;
+  max-height: 95%;
   min-height: 200px;
   position: relative;
   display: flex;
