--- a/components/InputText.css
+++ b/components/InputText.css
@@ -47,3 +47,20 @@
   transform: translateY(-50%);
   font-size: 0.75rem;
 }
+
+
+
+@media (max-width: 500px) {
+  .input-and-label-wrapper {
+    max-height: 3rem;
+  }
+
+  .text-input {
+    font-size: 1rem;
+    height: 3rem;
+  }
+
+  .text-input-label {
+    font-size: 1rem;
+  }
+}
