--- a/components/InputTextarea.css
+++ b/components/InputTextarea.css
@@ -50,3 +50,15 @@
   transform: translateY(-50%);
   font-size: 0.75rem;
 }
+
+
+
+@media (max-width: 500px) {
+  .textarea-input {
+    font-size: 1rem;
+  }
+
+  .textarea-input-label {
+    font-size: 1rem;
+  }
+}
